# generic_subdomains-rs

./: .env.example  Cargo.toml  README.md  docker-compose.yml
src/: file.rs  firebase.rs  lib.rs  main.rs
src/aws/: config.rs  mod.rs  s3.rs  sns.rs
src/aws/s3/: client.rs  mod.rs  storage.rs  upload.rs
src/aws/sns/: client.rs  fifo.rs  mod.rs  sns.rs
src/file/: mod.rs
src/firebase/: validate.rs
