[package]
name = "generic_subdomains"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "0.48.0"
aws-sdk-s3 = "0.18.0"
aws-sdk-sns = "0.18.0"
reqwest = { version = "0.11", features = ["json"] }
sha2 = "0.10.6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
alcoholic_jwt = "4091.0.0"
